# mws-model-selection-assistant

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: adk_blueprint.py  adk_runtime.py  chat_api.py  config.py  memory.py  models.py  mws_client.py  mws_parser.py  pricing.py  recommender.py  reports.py  scenario_parser.py  schemas.py  server.py  state_codec.py
scripts/: docker_check.sh  pentest_runner.py  smoke_test.sh
tests/: test_api.py  test_embeddings.py  test_mws_parser.py  test_pricing.py  test_recommender.py  test_scenario_parser.py  test_security.py
tests/fixtures/mws/: gpt-models.txt  pricing.txt  quotas-limits.txt
